# kitchen-compass

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SKILL.md  pyproject.toml
assets/: recipe-template.md
assets/sample-household/deals/: weekly-deal-brief-input.json
assets/sample-household/household/: preferences.json  profile.json  stores.json
assets/sample-household/inventory/: freezer.md
assets/sample-household/recipes/: baked-pork-chops.md  burger-bowls.md  crispy-baked-chicken-thighs.md  garlic-mashed-potatoes.md  roasted-broccoli.md  sheet-pan-shrimp-fajitas.md  slow-cooker-garlic-parmesan-chicken.md  slow-cooker-pulled-pork.md  slow-cooker-short-ribs.md
references/: inventory-logic.md  live-vs-portable-boundary.md  planning-logic.md  recipe-schema.md  runtime-contract.md  setup-flow.md  user-data-layout.md  weekly-deal-brief.md
scripts/: build_recipe_query_index.py  build_weekly_plan.py  deals.py  food_brain_contract.py  food_brain_deals.py  food_brain_inventory.py  inventory.py  manage_deal_sources.py  manage_inventory.py  paths.py  prepare_weekly_deal_scan.py  query_recipes.py  record_meal_history.py  render_combined_weekly_deal_sheet.py  render_weekly_deal_brief.py  setup_household.py  validate_recipes.py  validation.py
scripts/planner/: __init__.py  common.py  core.py  history.py  presets.py  render.py  scoring.py
tests/: conftest.py  test_contract_alignment.py  test_golden_path.py  test_history.py  test_planner_scoring.py  test_validation.py
tests/fixtures/recipes/: baked-chicken.md  roasted-broccoli.md  simple-beef-dinner.md  (+1 more)
(+1 files in other folders)
